fix overflow csroll bug

--- a/app-web/src/components/GithubTemplate/SidePanel/SidePanel.module.css
+++ b/app-web/src/components/GithubTemplate/SidePanel/SidePanel.module.css
@@ -1,6 +1,8 @@
 .SidePanel {
   flex: 1 0 200px;
   background-color: #e0e0e0;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (min-width: 768px) {
@@ -13,7 +15,7 @@
       width: 260px;
       position: fixed;
       left: 0;
-      bottom: 0;
+      bottom: 47px;
       top: 52px;
   }
 }
