--- a/app-web/src/templates/SourceMarkdown.module.css
+++ b/app-web/src/templates/SourceMarkdown.module.css
@@ -72,6 +72,8 @@
 }
 
 .SidePanel {
+    display: flex;
+    flex-direction: column;
     flex: 1 0 200px;
 }
 
